--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  width: 100%;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.945);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+
+.form {
+  width: 50%;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input {
+  width: 100%;
+  height: 3rem;
+
+  color: green;
+  background-color: rgba(0, 0, 0, 0.945);
+  font-size: 20px;
+  outline: none;
+  border: 4px solid green;
+  
+  border-radius: 2rem;
+  margin-right: 2rem;
+}
+
+.btn {
+  width: 5rem;
+  height: 4rem;
+
+  color: green;
+  background-color: rgba(0, 0, 0, 0.945);
+  border-radius: 100%;
+  cursor: pointer;
+  border: 2px solid green;
+}
