--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  background-color: rgba(0, 0, 0, 0.945);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,10 +19,8 @@ code {
 }
 
 .App {
-  width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
 
-  background-color: rgba(0, 0, 0, 0.945);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,8 +30,11 @@ code {
 
 
 .form {
-  width: 50%;
-  
+  width: 30rem;
+  min-height: 20vh;
+
+  margin: 4rem 0rem;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +46,9 @@ code {
 
   color: green;
   background-color: rgba(0, 0, 0, 0.945);
-  font-size: 20px;
+
+  text-align: center;
+  font-size: 1.5rem;
   outline: none;
   border: 4px solid green;
   
@@ -48,12 +57,60 @@ code {
 }
 
 .btn {
-  width: 5rem;
-  height: 4rem;
+  width: 4rem;
+  height: 3rem;
 
   color: green;
   background-color: rgba(0, 0, 0, 0.945);
   border-radius: 100%;
   cursor: pointer;
   border: 2px solid green;
+}
+
+
+
+.todoContainer {
+  width: 80%;
+  color: green;
+  background-color: black;
+
+  font-size: 1.5rem;
+  padding: 0 2rem;
+  border-radius: .5rem;
+  margin-bottom: 1rem;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.todolist {
+  /* min-width: 30%; */
+  list-style: none;
+}
+
+.btnGroup {
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.todoCheck {
+  border: none;
+  outline: none;
+  color: rgb(14, 165, 14);
+  font-size: 1.3rem;
+  background-color: black;
+  cursor: pointer;
+}
+
+.todoDelete {
+  border: none;
+    outline: none;
+    color: red;
+    font-size: 1.3rem;
+    background-color: black;
+  cursor: pointer;
 }
