--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
 
 
 .form {
-  width: 30rem;
+  width: 40rem;
   min-height: 20vh;
 
   margin: 4rem 0rem;
@@ -47,10 +47,11 @@ code {
   color: green;
   background-color: rgba(0, 0, 0, 0.945);
 
-  text-align: center;
+  text-align: start;
+  padding-left: 20px;
   font-size: 1.5rem;
   outline: none;
-  border: 4px solid green;
+  border: 2px solid green;
   
   border-radius: 2rem;
   margin-right: 2rem;
@@ -61,10 +62,14 @@ code {
   height: 3rem;
 
   color: green;
+  font-size: 1.5rem;
+  text-transform: uppercase;
   background-color: rgba(0, 0, 0, 0.945);
-  border-radius: 100%;
-  cursor: pointer;
+  /* border-radius: 100%; */
   border: 2px solid green;
+  border-radius: 1rem;
+  cursor: pointer;
+  outline: none;
 }
 
 
@@ -90,6 +95,11 @@ code {
   list-style: none;
 }
 
+.todoComplete {
+  text-decoration: line-through;
+  color: skyblue;
+}
+
 .btnGroup {
   width: 30%;
   display: flex;
@@ -112,5 +122,14 @@ code {
     color: red;
     font-size: 1.3rem;
     background-color: black;
+  cursor: pointer;
+}
+
+.todoEdit {
+  border: none;
+  outline: none;
+  color: rgb(18, 22, 238);
+  font-size: 1.3rem;
+  background-color: black;
   cursor: pointer;
 }
